Fix status bar displaying incorrectly on login page on iOS (MOBACCTMGT-1032)

--- a/scss/includes/_wex-styles.scss
+++ b/scss/includes/_wex-styles.scss
@@ -28,6 +28,10 @@ wex-notification-bar {
     line-height: normal;
     overflow: hidden;
 
+    .platform-ios & {
+      top: $ios-statusbar-height;
+    }
+
     .icon-container {
       margin-right: 8px;
     }
