--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -17,10 +17,6 @@
     font-size: 12px;
     line-height: normal;
 
-    .platform-ios & {
-      top: 25px;
-    }
-
     .bar {
       position: relative;
     }
